[S31] update cors